--- a/client/style/main.css
+++ b/client/style/main.css
@@ -20,6 +20,7 @@ img {
   max-width: 100%;
   max-height: 100%;
   border-radius: 10px;
+  opacity: .95;
 }
 
 h3 {
@@ -56,7 +57,7 @@ h4 {
   font-size: 0.75em;
   margin: -5px 0 0;
   font-weight: normal;
-  color:white;
+  color:#4c854c;
 }
 
 
@@ -99,7 +100,7 @@ footer {
   text-align: center;
   clear: both;
   padding-top: 50px;
-  color: #faf8f2;
+  color: #4c854c; 
 }
 
 .social-icon {
@@ -125,14 +126,14 @@ PAGE: PORTFOLIO
   width: 28.3%;
   height: 23.6%;
   margin: 20% 2.5% 2.5%;
-  color: #faf8f2;
+  color: #4c854c;
 }
 
 #options li a p {
   margin: 0;
   padding: 5%;
   font-size: 0.75em;
-  color: #faf8f2
+  color: #4c854c;
 }
 
 
@@ -191,17 +192,17 @@ COLORS
 /* site body */
 body {
   background-color: #231414;
-  color: #faf8f2;
+  color: #4c854c;
 }
 
 /* logo text */
 h1, h2 {
-  color:  #faf8f2;
+  color:  #4c854c;
 }
 
 /* links */
 a {
-  color:  #faf8f2;
+  color:  #4c854c;
 }
 
 .image-title {
@@ -212,12 +213,12 @@ a {
 
 /* nav link */
 nav a, nav a:visited {
-  color: #faf8f2;;
+  color: #4c854c;;
 }
 
 /* selected nav link */
 nav a.selected, nav a:hover {
-  color: #fcf991;
+  color: #694c85;
 }
 
 
