--- a/client/style/main.css
+++ b/client/style/main.css
@@ -35,8 +35,8 @@ HEADING
 
 header {
   float: left;
-  margin: 0 0 30px 0;
-  padding: 5px 0 0 0;
+  /*margin: 0 0 30px 0;*/
+  /*padding: 5px 0 0 0;*/
   width: 100%;
 }
 
