--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -18,10 +18,10 @@
       </a>
       <nav>
         <ul>
-          <li><a href="/" class="selected">Home</a></li>
-          <li><a href="/toyProblems">Toy Problems</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
+          <li><a href="/" class="navbarOption">Home</a></li>
+          <li><a href="/toyProblems" class="navbarOption">Toy Problems</a></li>
+          <li><a href="/blog" class="navbarOption">Blog</a></li>
+          <li><a href="/portfolio" class="navbarOption">Portfolio</a></li>
         </ul>
       </nav>
     </header>
