add additional endpoint functionality to toy problems

--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+<!-- Hi! Thanks for checking out my code, if you have questions about something you can contact me at richardjboothe@me.com. Happy coding! -->
 <!DOCTYPE html>
 <html>
   <head>
