add form view for future

--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <header>
       <a href="/" id="logo">
         <h1>RICHARD BOOTHE</h1>
-        <h4>DEVELOPER</h4>
+        <h4>DEVELOPER | DESIGNER</h4>
       </a>
       <nav>
         <ul>
