--- a/client/style/main.css
+++ b/client/style/main.css
@@ -183,7 +183,25 @@ PAGE: CONTACT
   background-image: url('../img/twitter.png');
 }
 
+/**********************************
+FORM VALIDATION
+***********************************/
+input, textarea, select, button {
+  width : 150px;
+  margin: 0;
 
+  -webkit-box-sizing: border-box;  /*For legacy WebKit based browsers */
+     -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
+          box-sizing: border-box;
+}
+
+input:invalid {
+  border: 1px solid red;
+}
+
+input:valid {
+  border: 1px solid green;
+}
 
 /**********************************
 COLORS
