--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -3,7 +3,7 @@
         <ul id="options">
           <li>
             <p class="image-title">Toy Problems</p>
-            <a href="/toyProblems">
+            <a href="/toy-problems">
               <img src="img/toyProblems.jpg" alt="toy problems">
             </a>  
           </li>
