--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li><a href="/" class="navbarOption">Home</a></li>
-          <li><a href="/toyProblems" class="navbarOption">Toy Problems</a></li>
+          <li><a href="/toy-problems" class="navbarOption">Toy Problems</a></li>
           <li><a href="/blog" class="navbarOption">Blog</a></li>
           <li><a href="/portfolio" class="navbarOption">Portfolio</a></li>
         </ul>
