--- a/server/views/blog.handlebars
+++ b/server/views/blog.handlebars
@@ -1,15 +1,26 @@
-<div id="postMainContainer">
+ <div id="postMainContainer">
   <h1 class="postHeader">Blog</h1>
-  {{#each posts}}  
-      <div class="postContainer">
-        <div class="postPhoto"></div>
-          <a href="blog/{{id}}"> 
+  {{#if posts}}  
+    {{#each posts}}  
+        <div class="postContainer">
+          <a href="blog/{{title}}">
+            <div class="postPhoto">
+              <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
+            </div>
             <div class="postInnerContainer">
               <h3 class="postTitle">{{title}}</h3>
               <p class="postDescription">{{description}}</p>
             </div>
           </a>
-      </div>
-  {{/each}}
+        </div>
+    {{/each}}
+  {{/if}}
 </div>
+  
 
+{{!-- <div id="comments">
+  {{#each posts}}
+  <h2><a href="/posts/{{title}}">{{title}}</a></h2>
+  <div>{{body}}</div>
+  {{/each}}
+</div> --}}
