--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -1,23 +1,30 @@
-    <div id="wrapper">
-      <section>
-        <ul id="options">
-          <li>
-            <p class="image-title">Toy Problems</p>
-            <a href="/toy-problems">
-              <img src="img/toyProblems.jpg" alt="toy problems">
-            </a>  
-          </li>
-          <li>
-            <p class="image-title">Blog</p>
-            <a href="/blog">
-              <img src="img/blog.jpg" alt="blog">
-            </a>  
-          <li>
-            <p class="image-title">Portfolio</p>
-            <a href="/portfolio">
-              <img src="img/portfolio.jpg" alt="portfolio">
-            </a>  
-          </li>
-        </ul>
-      </section>
-    </div>
+<div id="wrapper">
+  <section>
+    <ul id="options">
+      <div class="primary_content">
+        <li>
+          <p class="image-title">Toy Problems</p>
+          <a href="/toy-problems">
+            <img src="img/toyProblems.jpg" alt="toy problems" />
+          </a>  
+        </li>
+      </div>
+      <div class="primary_content">
+        <li>
+          <p class="image-title">Blog</p>
+          <a href="/blog">
+            <img src="img/blog.jpg" alt="blog" />
+          </a>
+        </li>
+      </div>  
+      <div class="primary_content">
+        <li>
+          <p class="image-title">Portfolio</p>
+          <a href="/portfolio">
+            <img src="img/portfolio.jpg" alt="portfolio" />
+          </a>  
+        </li>
+      </div>
+    </ul>
+  </section>
+</div>
