--- a/server/views/toyProblems.handlebars
+++ b/server/views/toyProblems.handlebars
@@ -1,19 +1,18 @@
+{{debug}}
 <div id="toyProblemMainContainer">
-  <h1 class="toyProblemHeader">Toy Problem</h1>
-  {{#if toy_problems}}  
+  <h1 class="toyProblemHeader">Toy Problem</h1> 
     {{#each toy_problems}}  
         <div class="toy_problem_Container">
-          <a href="toy-problems/{{title}}">
-            <div class="toy_problem_Photo">
+          <a href="/toy-problems/{{title}}">
+            <div class="toy_problem_Photo_small">
               <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
             </div>
             <div class="toy_problem_InnerContainer">
               <h3 class="toy_problem_Title">{{title}}</h3>
               <p class="toy_problem_Description">{{description}}</p>
             </div>
-          </a>
+          </a> 
         </div>
     {{/each}}
-  {{/if}}
 </div>
 
