--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -12,26 +12,8 @@
     <script src="lib/jquery-3.0.0.min.js"></script>
   </head>
   <body> 
-    <header>
-      <a href="/" id="logo">
-        <h1>RICHARD BOOTHE</h1>
-        <h4>DEVELOPER | DESIGNER</h4>
-      </a>
-      <nav>
-        <ul>
-          <li><a href="/" class="navbarOption">Home</a></li>
-          <li><a href="/toy-problems" class="navbarOption">Toy Problems</a></li>
-          <li><a href="/blog" class="navbarOption">Blog</a></li>
-          <li><a href="/portfolio" class="navbarOption">Portfolio</a></li>
-        </ul>
-      </nav>
-    </header>
+    {{>nav}}
     {{{body}}}
-    <footer class="main-footer">
-      <a href="http://twitter.com/richardjboothe" target="_blank"><img src="img/twitter2.png" alt="Twitter Logo" class="social-icon" ></a>
-      <a href="http://github.com/richardjboothe" target="_blank"><img src="img/github2.png" alt="Github Logo" class="social-icon" ></a>
-      <a href="http://facebook.com/richardjboothe" target="_blank"><img src="img/facebook2.png" alt="Facebook Logo" class="social-icon" ></a>
-      <p>&copy; 2016 Richard Boothe</p>
-    </footer>
+    {{>footer}}
   </body>
 </html>
