--- a/server/views/singleToyProblem.handlebars
+++ b/server/views/singleToyProblem.handlebars
@@ -1,3 +1,4 @@
+{{debug}}
   <div id="toyProblemWidget">
     <div class="toy_problem_Photo_large">
       <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
