tweak linkedin logo

--- a/server/views/partials/footer.handlebars
+++ b/server/views/partials/footer.handlebars
@@ -2,6 +2,6 @@
   <a href="http://github.com/richardjboothe" target="_blank"><img src="img/github2.png" alt="Github Logo" class="social-icon" ></a>
   <a href="http://twitter.com/richardjboothe" target="_blank"><img src="img/twitter2.png" alt="Twitter Logo" class="social-icon" ></a>
   <a href="http://linkedin.com/richardjboothe" target="_blank"><img src="img/linkedin.png" alt="LinkedIn Logo" class="social-icon" ></a>
-  <a href="https://www.linkedin.com/in/richardjboothe" target="_blank"><img src="img/facebook2.png" alt="Facebook Logo" class="social-icon" ></a>
+  <a href="https://www.linkedin.com/in/richardjboothe" target="_blank"><img src="img/facebook2.png" alt="Facebook Logo" class="social-icon2" ></a>
   <p>&copy; 2016 Richard Boothe</p>
 </footer>
