--- a/public/style/main.css
+++ b/public/style/main.css
@@ -109,7 +109,11 @@ footer {
   margin: 0 7px;
 }
 
-
+.social-icon2 {
+  width: 22px;
+  height: 22px;
+  margin: 0 7px;
+}
 
 /**********************************
 PAGE: PORTFOLIO
