--- a/server/views/blog.handlebars
+++ b/server/views/blog.handlebars
@@ -2,7 +2,7 @@
   <h1 class="postHeader">Blog</h1>
     {{#each posts}}  
         <div class="postContainer">
-          <a href="blog/{{title}}">
+          <a href="/blog/{{title}}">
             <div class="postPhoto_small">
               <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
             </div>
