--- a/public/style/main.css
+++ b/public/style/main.css
@@ -111,7 +111,7 @@ footer {
 
 
 /**********************************
-PAGE: PORTFOLIO
+PAGE: Content
 ***********************************/
 
 #options {
