--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -1,15 +1,16 @@
-<div id="blogWidget">
-  <div class="post_Photo_large">
-    <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
-  </div>
-  <div class="post_title_description">
-    <h1 class="postHeader">{{title}}</h1>
-    <p>{{description}}</p>
-  </div>
-  <div class="post_Container">
-        <div class="post_InnerContainer">
-          <p class="post_Description">{{body}}</p>
-        </div>
+<div id="wrapper">
+  <div id="blogWidget">
+    <div class="post_Photo_large">
+      <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
+    </div>
+    <div class="post_title_description">
+      <h1 class="postHeader">{{title}}</h1>
+      <p>{{description}}</p>
+    </div>
+    <div class="post_Container">
+          <div class="post_InnerContainer">
+            <p class="post_Description">{{body}}</p>
+          </div>
+    </div>
   </div>
 </div>
-
