--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4,16 +4,20 @@ GENERAL
 
 body {
   font-family: 'Avenir Next ', sans-serif;
+  background-color: #231414;
+  color: #4c854c;
 }
 
 #wrapper {
-  max-width: 940px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 0 5%;
 }
 
 a {
   text-decoration: none;
+  color:  #4c854c;
+
 }
 
 img {
@@ -23,34 +27,22 @@ img {
   opacity: .95;
 }
 
-h3 {
-  margin: 0 0 1em 0;
-}
-
-
-
-/**********************************
-HEADING
-***********************************/
-
-header {
-  float: left;
-  /*margin: 0 0 30px 0;*/
-  /*padding: 5px 0 0 0;*/
-  width: 100%;
-}
-
-#logo {
-  text-align: center;
-  margin: 0;
-}
-
 h1 {
   font-family: 'Changa One', sans-serif;
-  margin: 15px 0;
-  font-size: 1.75em;
+  color:  #4c854c;
+  margin: 0;
+  font-size: 2em;
   font-weight: normal;
   line-height: 0.8em;
+}
+
+h2 {
+  font-size: 1.5em;
+  color:  #4c854c;
+}
+
+h3 {
+  margin: 0 0 1em 0;
 }
 
 h4 {
@@ -60,21 +52,49 @@ h4 {
   color:#4c854c;
 }
 
+/**********************************
+HEADING
+***********************************/
 
+header {
+  float: left;
+  width: 100%;
+  border-bottom: 2px solid #3a2121;
+  padding: 1.5em 0 0 0;
+}
+
+#logo {
+  float: left;
+  margin-left: 5%;
+  text-align: left;
+  width: 45%;
+}
+
+#headerName {
+  margin: 0 0 .5em 0;
+}
+
+#headerOccupation {
+
+}
 
 /**********************************
 NAVIGATION
 ***********************************/
-
 nav {
-  text-align: center;
-  padding: 10px 0;
-  margin: 20px 0 0;
+  background: none;
+  float: right;
+  font-family: 'Changa One', 'Avenir Next';
+  font-size: 1.5em;
+  margin-right: 5%;
+  text-align: right;
+  width: 45%;
+  padding: .1em 0 0 0;
 }
 
 nav ul {
   list-style: none;
-  margin: 0 10px;
+  margin: 0;
   padding: 0;
 }
 
@@ -82,13 +102,18 @@ nav li {
   display: inline-block;
 }
 
-nav a {
+/* nav link */
+nav a, nav a:visited {
+  color: #4c854c;
   font-weight: 800;
-  padding: 15px 10px;
+  font-size: 1em;
+  padding: .5em;
 }
 
-#home {
-  display: none;
+
+/* selected nav link */
+nav a.selected, nav a:hover {
+  color: #694c85;
 }
 
 /**********************************
@@ -99,13 +124,14 @@ footer {
   font-size: 0.75em;
   text-align: center;
   clear: both;
-  padding-top: 50px;
+  padding-top: 3em;
   color: #4c854c; 
 }
 
 .social-icon {
   width: 20px;
   height: 20px;
+  padding:3px;
   margin: 0 7px;
 }
 
@@ -135,55 +161,19 @@ CONTENT
   color: #4c854c;
 }
 
-
-
 /**********************************
 PAGE: ABOUT
 ***********************************/
 
-.profile-photo {
+/*.profile-photo {
   display: block;
   max-width: 150px;
   margin: 0 auto 30px;
   border-radius: 100%;
 }
-
-
-
+*/
 /**********************************
-PAGE: CONTACT
-***********************************/
-
-.contact-info {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-size: 0.9em;
-}
-
-.contact-info a {
-  display: block;
-  min-height: 20px;
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  padding: 0 0 0 30px;
-  margin: 0 0 10px;
-}
-
-.contact-info li.phone a {
-  background-image: url('../img/phone.png');
-}
-
-.contact-info li.mail a {
-  background-image: url('../img/mail.png');
-}
-
-.contact-info li.twitter a {
-  background-image: url('../img/twitter.png');
-}
-
-/**********************************
-FORM VALIDATION
+ADD CONTENT FORM VALIDATION 
 ***********************************/
 input, textarea, select, button {
   width : 150px;
@@ -206,21 +196,7 @@ input:valid {
 COLORS
 ***********************************/
 
-/* site body */
-body {
-  background-color: #231414;
-  color: #4c854c;
-}
 
-/* logo text */
-h1, h2 {
-  color:  #4c854c;
-}
-
-/* links */
-a {
-  color:  #4c854c;
-}
 
 .image-title {
   font-family: 'Changa One', 'Avenir Next';
@@ -228,18 +204,19 @@ a {
   text-align: center;
 }
 
-/* nav link */
-nav a, nav a:visited {
-  color: #4c854c;;
+
+  /**********************************
+  RESPONSIVE DESIGN 
+  ***********************************/
+
+
+@media screen and (min-width: 770px) {
+
+  /**********************************
+  HEADER
+  ***********************************/
+
 }
-
-/* selected nav link */
-nav a.selected, nav a:hover {
-  color: #694c85;
-}
-
-
-
 
 
 
