--- a/server/views/500.handlebars
+++ b/server/views/500.handlebars
@@ -1,1 +1,3 @@
-<h1 class = "contentHeader">500 - Server Error</h1>
+<div id="wrapper">
+  <h1 class = "contentHeader">500 - Server Error</h1>
+</div>
