--- a/server/views/blog.handlebars
+++ b/server/views/blog.handlebars
@@ -1,17 +1,19 @@
-<div id="contentMainContainer">
-  <h1 class="contentHeader">Blog</h1>
-    {{#each posts}}  
-        <div class="contentContainer">
-          <a href="/blog/{{title}}">
-            <div class="contentPhoto">
-              <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
-            </div>
-            <div class="contentInnerContainer">
-              <h3 class="contentTitle">{{title}}</h3>
-              <p class="contentDescription">{{description}}</p>
-            </div>
-          </a>
-        </div>
-    {{/each}}
+<div id="wrapper">
+  <div id="contentMainContainer">
+    <h1 class="contentHeader">Blog</h1>
+      {{#each posts}}  
+          <div class="contentContainer">
+            <a href="/blog/{{title}}">
+              <div class="contentPhoto">
+                <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
+              </div>
+              <div class="contentInnerContainer">
+                <h3 class="contentTitle">{{title}}</h3>
+                <p class="contentDescription">{{description}}</p>
+              </div>
+            </a>
+          </div>
+      {{/each}}
+  </div>
 </div>
-  
+    
