--- a/server/views/partials/nav.handlebars
+++ b/server/views/partials/nav.handlebars
@@ -1,14 +1,16 @@
 <header>
-  <a href="/" id="logo">
-    <h1>RICHARD BOOTHE</h1>
-    <h4>DEVELOPER | DESIGNER</h4>
-  </a>
+  <div id="logo">
+    <a href="/">
+      <h1 id="headerName">RICHARD BOOTHE</h1>
+      <h4 id="headerOccupation">DEVELOPER | DESIGNER</h4>
+    </a>
+  </div>
   <nav>
     <ul>
-      <li><a href="/" class="navbarOption">Home</a></li>
-      <li><a href="/toy-problems" class="navbarOption">Toy Problems</a></li>
-      <li><a href="/blog" class="navbarOption">Blog</a></li>
-      <li><a href="/portfolio" class="navbarOption">Portfolio</a></li>
+      <li><a href="/" class="navbarOption">HOME</a></li>
+      <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
+      <li><a href="/blog" class="navbarOption">BLOG</a></li>
+      <li><a href="/portfolio" class="navbarOption">PORTFOLIO</a></li>
     </ul>
   </nav>
 </header>
