--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4,8 +4,8 @@ GENERAL
 
 body {
   font-family: 'Avenir Next ', sans-serif;
-  background-color: #231414;
-  color: #4c854c;
+  background-color: #020707;
+  color: #60a8a2;
 }
 
 #wrapper {
@@ -16,7 +16,7 @@ body {
 
 a {
   text-decoration: none;
-  color:  #4c854c;
+  color:  #60a8a2;
 
 }
 
@@ -29,7 +29,7 @@ img {
 
 h1 {
   font-family: 'Changa One', sans-serif;
-  color:  #4c854c;
+  color:  #60a8a2;
   margin: 0;
   font-size: 2em;
   font-weight: normal;
@@ -38,7 +38,7 @@ h1 {
 
 h2 {
   font-size: 1.5em;
-  color:  #4c854c;
+  color:  #60a8a2;
 }
 
 h3 {
@@ -49,7 +49,7 @@ h4 {
   font-size: 0.75em;
   margin: -5px 0 0;
   font-weight: normal;
-  color:#4c854c;
+  color:#60a8a2;
 }
 
 /**********************************
@@ -104,7 +104,7 @@ nav li {
 
 /* nav link */
 nav a, nav a:visited {
-  color: #4c854c;
+  color: #60a8a2;
   font-weight: 800;
   font-size: 1em;
   padding: .5em;
@@ -125,7 +125,7 @@ footer {
   text-align: center;
   clear: both;
   padding-top: 3em;
-  color: #4c854c; 
+  color: #60a8a2; 
 }
 
 .social-icon {
@@ -148,17 +148,10 @@ CONTENT
 
 #options li {
   float: left;
-  width: 28.3%;
+  width: 28.333%;
   height: 23.6%;
-  margin: 20% 2.5% 2.5%;
-  color: #4c854c;
-}
-
-#options li a p {
-  margin: 0;
-  padding: 5%;
-  font-size: 0.75em;
-  color: #4c854c;
+  margin: 12% 2.5% 12%;
+  color: #60a8a2;
 }
 
 /**********************************
