finalize alpha style for landing page

--- a/server/views/blog.handlebars
+++ b/server/views/blog.handlebars
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div class="wrapper">
   <div id="contentMainContainer">
     <h1 class="contentHeader">Blog</h1>
       {{#each posts}}  
@@ -16,4 +16,3 @@
       {{/each}}
   </div>
 </div>
-    
