--- a/server/views/singleToyProblem.handlebars
+++ b/server/views/singleToyProblem.handlebars
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div class="wrapper">
   <div id="toyProblemWidget">
     <div class="toy_problem_Photo_large">
       <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
