--- a/server/views/toyProblems.handlebars
+++ b/server/views/toyProblems.handlebars
@@ -1,6 +1,6 @@
-<div id="wrapper">
-  <div id="contentMainContainer">
-    <h1 class="contentHeader">Toy Problem</h1> 
+<div class = "wrapper">
+  <div class ="contentMainContainer">
+    <h1 class ="contentHeader">Toy Problems</h1> 
       {{#each toy_problems}}  
           <div class="contentContainer">
             <a href="/toy-problems/{{title}}">
