--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,22 +1,22 @@
 /**********************************
 GENERAL
 ***********************************/
-
+/*(1B9AAA(LIGHT SEA GREEN),DDDBCB(bone),F5F1E3(alabaster),FFFFFF(white)*/
 body {
   font-family: 'Avenir Next ', sans-serif;
-  background-color: #020707;
-  color: #60a8a2;
+  background-color: #050505;
+  color: #1B9AAA;
 }
 
-#wrapper {
+.wrapper {
   max-width: 80%;
   margin: 0 auto;
-  padding: 0 5%;
+  padding: 6% 5%;
 }
 
 a {
   text-decoration: none;
-  color:  #60a8a2;
+  color:  #1B9AAA;
 
 }
 
@@ -29,7 +29,7 @@ img {
 
 h1 {
   font-family: 'Changa One', sans-serif;
-  color:  #60a8a2;
+  color:  #1B9AAA;
   margin: 0;
   font-size: 2em;
   font-weight: normal;
@@ -38,7 +38,7 @@ h1 {
 
 h2 {
   font-size: 1.5em;
-  color:  #60a8a2;
+  color:  #1B9AAA;
 }
 
 h3 {
@@ -49,7 +49,10 @@ h4 {
   font-size: 0.75em;
   margin: -5px 0 0;
   font-weight: normal;
-  color:#60a8a2;
+  -webkit-column-rule: #1B9AAA;
+  -moz-column-rule: #1B9AAA;
+  -o-column-rule: #1B9AAA;
+  column-rule: #1B9AAA;
 }
 
 /**********************************
@@ -59,8 +62,9 @@ HEADING
 header {
   float: left;
   width: 100%;
-  border-bottom: 2px solid #3a2121;
+  /*border-bottom: 2px solid #F5F1E3;*/
   padding: 1.5em 0 0 0;
+  background: #F5F1E3;
 }
 
 #logo {
@@ -104,7 +108,7 @@ nav li {
 
 /* nav link */
 nav a, nav a:visited {
-  color: #60a8a2;
+  color: #1B9AAA;
   font-weight: 800;
   font-size: 1em;
   padding: .5em;
@@ -119,13 +123,12 @@ nav a.selected, nav a:hover {
 /**********************************
 FOOTER
 ***********************************/
-
-footer {
+.main-footer{
   font-size: 0.75em;
   text-align: center;
   clear: both;
-  padding-top: 3em;
-  color: #60a8a2; 
+  padding:1em 0;
+  color: #1B9AAA; 
 }
 
 .social-icon {
@@ -137,7 +140,7 @@ footer {
 
 
 /**********************************
-CONTENT
+HOME PAGE CONTENT
 ***********************************/
 
 #options {
@@ -150,8 +153,25 @@ CONTENT
   float: left;
   width: 28.333%;
   height: 23.6%;
-  margin: 12% 2.5% 12%;
-  color: #60a8a2;
+  margin: 10% 2.5% 10%;
+  color: #1B9AAA;
+}
+
+/**********************************
+BLOGS/TOY PROBLEMS/PORTFOLIO LISTING CONTENT
+***********************************/
+.contentMainContainer{
+
+}
+
+.contentHeader {
+  text-align: center;
+  padding: .4em 0;
+  font-size: 3em;
+}
+
+.contentContainer {
+  
 }
 
 /**********************************
