--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -1,18 +1,20 @@
 <div class="wrapper">
-  <div id="contentMainContainer">
+  <div class="contentMainContainer">
     <h1 class="contentHeader">Portfolio</h1>
       {{#each projects}}  
-          <div class="contentContainer">
-            <a href="projects/{{title}}">
+          <a href="/projects/{{title}}">
+            <div class="contentContainer">
+              <span class="contentTitle">
+                <h3>{{title}}</h3>
+              </span>
               <div class="contentPhoto">
                 <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
-                <h3 class="contentTitle">{{title}}</h3>
                 <p class="contentDescription">{{description}}</p>
               </div>
-            </a>
-          </div>
+            </div>
+          </a>
       {{/each}}
   </div>
 </div>
