--- a/server/views/404.handlebars
+++ b/server/views/404.handlebars
@@ -1,3 +1,13 @@
 <div class="wrapper">
   <h1 class = "contentHeader">404 - Not Found</h1>
+  <a href="/">
+    <div class="contentContainer">
+      <div class="contentPhoto">
+        <img alt="404 photo" src="{{image}}" height="96" width="96"/> 
+      </div>
+      <div class="contentInnerContainer">
+        <p class="contentDescription">It seems this page has been lost to the sarlac pit. Try again kid!</p>
+      </div>
+    </div>
+  </a>
 </div>
