--- a/server/views/blog.handlebars
+++ b/server/views/blog.handlebars
@@ -11,7 +11,9 @@
                 <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
-                <p class="contentDescription">{{description}}</p>
+                <span class="contentDescription"> 
+                  <p>{{description}}</p>
+                </span>
               </div>
             </div>
           </a>
