--- a/server/views/toyProblems.handlebars
+++ b/server/views/toyProblems.handlebars
@@ -1,20 +1,22 @@
-<div class = "wrapper">
-  <div class ="contentMainContainer">
-    <h1 class ="contentHeader">Toy Problems</h1> 
+<div class="wrapper">
+  <div id="contentMainContainer">
+    <h1 class="contentHeader">Toy Problems</h1>
       {{#each toy_problems}}  
           <a href="/toy-problems/{{title}}">
             <div class="contentContainer">
               <span class="contentTitle">
-                <h3>{{title}}</h3>
+                  <h3>{{title}}</h3>
               </span>
               <div class="contentPhoto">
                 <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
-                <p class="contentDescription">{{description}}</p>
+                <span class="contentDescription"> 
+                  <p>{{description}}</p>
+                </span>
               </div>
             </div>
-          </a> 
+          </a>
       {{/each}}
   </div>
 </div>
