--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -1,5 +1,9 @@
 <div class="wrapper">
   <div id="blogWidget">
+  {{!-- <div id="contentMainContainer"> --}}
+    <span class="contentTitle">
+      <h3>{{title}}</h3>
+    </span>
     <div class="post_Photo_large">
       <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
     </div>
