--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -2,13 +2,13 @@
   <div id="contentMainContainer">
     <h1 class="contentHeader">Portfolio</h1>
       {{#each projects}}  
-          <a href="/projects/{{title}}">
+          <a href="{{url}}" >
             <div class="contentContainer">
               <span class="contentTitle">
                   <h3>{{title}}</h3>
               </span>
               <div class="contentPhoto">
-                <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
+                <img alt="{{title}} photo" src="./../../public/img/{{image}}" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
                 <span class="contentDescription"> 
