--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -1,20 +1,21 @@
 <div class="wrapper">
   <div id="blogWidget">
-  {{!-- <div id="contentMainContainer"> --}}
-    <span class="contentTitle">
-      <h3>{{title}}</h3>
-    </span>
-    <div class="post_Photo_large">
-      <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
-    </div>
-    <div class="post_title_description">
-      <h1 class="postHeader">{{title}}</h1>
-      <p>{{description}}</p>
-    </div>
-    <div class="post_Container">
-          <div class="post_InnerContainer">
-            <p class="post_Description">{{body}}</p>
-          </div>
+    <div id="contentMainContainer">
+      <span class="contentTitle">
+        <h3>{{title}}</h3>
+      </span>
+      <div class="post_Photo_large">
+        <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
+      </div>
+      <div class="post_title_description">
+        <h1 class="postHeader">{{title}}</h1>
+        <p>{{description}}</p>
+      </div>
+      <div class="post_Container">
+        <div class="post_InnerContainer">
+          <p class="post_Description">{{body}}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
