--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -8,7 +8,7 @@
                   <h3>{{title}}</h3>
               </span>
               <div class="contentPhoto">
-                <img alt="{{title}} photo" src="./../../public/img/{{image}}" height="96" width="96"/> 
+                <img src="img/{{image}}" alt="{{title}} photo" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
                 <span class="contentDescription"> 
@@ -20,6 +20,5 @@
       {{/each}}
   </div>
 </div>
-
 
 {{!-- PROJECTS - http://trailrpark.herokuapp.com/#/trail/147 --}}
