--- a/server/views/singleToyProblem.handlebars
+++ b/server/views/singleToyProblem.handlebars
@@ -1,17 +1,19 @@
 <div class="wrapper">
-  <div id="toyProblemWidget">
-    <div class="toy_problem_Photo_large">
-      <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
-    </div>
-    <div class="toy_problem_title_description">
-      <h1 class="toyProblemHeader">{{title}}</h1>
-      <p>{{description}}</p>
-    </div>
-    <div class="toy_problem_Container">
+    <div id="contentMainContainer">
+      <h1 class="contentHeader">{{title}}</h1>
+      <div class="singleContentContainer">
+        <div class="toy_problem_Photo_large">
+          <img alt="{{title}} photo" src="{{image}}" height="96" width="96"/> 
+        </div>
+        <div class="toy_problem_title_description">
+          <p>{{description}}</p>
+        </div>
+        <div class="toy_problem_Container">
           <div class="toy_problem_InnerContainer">
             <p class="toy_problem_Description">{{body}}</p>
           </div>
+        </div>
+      </div>
     </div>
-  </div>
 </div>
-
+  
