--- a/public/style/main.css
+++ b/public/style/main.css
@@ -23,7 +23,6 @@ a {
 img {
   max-width: 100%;
   max-height: 100%;
-  border-radius: 10px;
   opacity: .95;
 }
 
@@ -194,6 +193,7 @@ BLOGS/TOY PROBLEMS/PORTFOLIO LISTING CONTENT
     display: inline-block;
     margin: auto .7em auto auto;
     background-color: #050505;
+    /*border-radius: 10px;  */
 }
 
 .contentInnerContainer {
