--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -5,7 +5,7 @@
         <li>
           <a href="/toy-problems">
             <p class="image-title">Toy Problems</p>
-            <img src="img/toyProblems.jpg" alt="toy problems" />
+            <img src="./img/toyProblems.jpg" alt="toy problems" />
           </a>  
         </li>
       </div>
