--- a/server/views/404.handlebars
+++ b/server/views/404.handlebars
@@ -3,7 +3,7 @@
   <a href="/">
     <div class="contentContainer">
       <div class="contentPhoto">
-        <img alt="404 photo" src="{{image}}" height="96" width="96"/> 
+        <img alt="404 photo" src="{{static '404.png'}}" height="96" width="96"/> 
       </div>
       <div class="contentInnerContainer">
         <p class="contentDescription">It seems this page has been lost to the sarlac pit. Try again kid!</p>
