add style to footer

--- a/server/views/partials/footer.handlebars
+++ b/server/views/partials/footer.handlebars
@@ -3,5 +3,5 @@
   <a href="http://twitter.com/richardjboothe" target="_blank"><img src="{{static 'img/twitter.png'}}" alt="Twitter Logo" class="social-icon" ></a>
   <a href="http://www.linkedin.com/in/richardjboothe" target="_blank"><img src="{{static 'img/linkedin.png'}}" alt="LinkedIn Logo" class="social-icon" ></a>
   <a href="http://www.facebook.com/richardjboothe" target="_blank"><img src="{{static 'img/facebook2.png'}}" alt="Facebook Logo" class="social-icon" ></a>
-  <p>&copy; 2016 Richard Boothe</p>
+  <p class="copywrite">&copy; 2016 Richard Boothe</p>
 </footer>
