--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,6 +2,12 @@
 GENERAL
 ***********************************/
 /*(050505(RICH BLACK), 1B9AAA(LIGHT SEA GREEN), DDDBCB(bone), F5F1E3(alabaster), FFFFFF(white)*/
+@font-face {
+  font-family: 'Changa One';
+  src: url('../fonts/ChangaOne-Italic.ttf'),
+       url('../fonts/ChangaOne-Regular.ttf');
+}
+
 body {
   font-family: 'Avenir Next ', sans-serif;
   background-color: #050505;
