--- a/server/views/partials/footer.handlebars
+++ b/server/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
 <footer class="main-footer">
-  <a href="http://github.com/richardjboothe" target="_blank"><img src="{{static 'img/github.png'}}" alt="Github Logo" class="social-icon" ></a>
-  <a href="http://twitter.com/richardjboothe" target="_blank"><img src="{{static 'img/twitter.png'}}" alt="Twitter Logo" class="social-icon" ></a>
-  <a href="http://www.linkedin.com/in/richardjboothe" target="_blank"><img src="{{static 'img/linkedin.png'}}" alt="LinkedIn Logo" class="social-icon" ></a>
-  <a href="http://www.facebook.com/richardjboothe" target="_blank"><img src="{{static 'img/facebook2.png'}}" alt="Facebook Logo" class="social-icon" ></a>
+  <a href="http://github.com/richardjboothe" target="_blank"><img src="/img/github.png" alt="Github Logo" class="social-icon" ></a>
+  <a href="http://twitter.com/richardjboothe" target="_blank"><img src="/img/twitter.png" alt="Twitter Logo" class="social-icon" ></a>
+  <a href="http://www.linkedin.com/in/richardjboothe" target="_blank"><img src="/img/linkedin.png" alt="LinkedIn Logo" class="social-icon" ></a>
+  <a href="http://www.facebook.com/richardjboothe" target="_blank"><img src="/img/facebook2.png" alt="Facebook Logo" class="social-icon" ></a>
   <p class="copywrite">&copy; 2016 Richard Boothe</p>
 </footer>
