minor code cleanup

--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -3,7 +3,7 @@
       <h1 class="contentHeader">{{title}}</h1>
       <div class="singleContentContainer">
         <div class="post_Photo_large">
-          <img alt="{{title}} photo" src="{{static '{{image}}'}}" height="96" width="96"/> 
+          <img alt="{{title}} photo" src="/img/{{image}}" height="96" width="96"/> 
         </div>
         <div class="post_title_description">
           <p>{{description}}</p>
