--- a/server/views/toyProblems.handlebars
+++ b/server/views/toyProblems.handlebars
@@ -8,7 +8,7 @@
                   <h3>{{title}}</h3>
               </span>
               <div class="contentPhoto">
-                <img alt="{{title}} photo" src="{{static '{{image}}'}}" height="96" width="96"/> 
+                <img alt="{{title}} photo" src="/img/{{image}}" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
                 <span class="contentDescription"> 
