--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -8,7 +8,7 @@
                   <h3>{{title}}</h3>
               </span>
               <div class="contentPhoto">
-                <img src="img/{{image}}" alt="{{title}} photo" height="96" width="96"/> 
+                <img src="/img/{{image}}" alt="{{title}} photo" height="96" width="96"/> 
               </div>
               <div class="contentInnerContainer">
                 <span class="contentDescription"> 
