--- a/public/style/main.css
+++ b/public/style/main.css
@@ -26,9 +26,10 @@ img {
   max-height: 100%;
 }
 
-a img {
+li a img {
   opacity: .95;
   border-radius: 10px;
+  border: 3px solid #f5f1e3;
 }
 h1 {
   font-family: 'Changa One', sans-serif;
