--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -19,7 +19,7 @@
       </div>  
       <div class="primary_content">
         <li>
-          <a href="./portfolio.handlebars">
+          <a href="/portfolio">
             <p class="image-title">Portfolio</p>
             <img src="/img/portfolio.jpg" alt="portfolio" />
           </a>  
