--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -4,9 +4,9 @@
   <head>
     <title>Richard Boothe | Developer</title>
     <link rel="icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="/style/normalize.css" />
+    <link rel="stylesheet" href="/style/normalize.min.css" />
 {{!--     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'> --}}
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/main.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/lib/jquery-3.0.0.min.js"></script>
   </head>
@@ -16,4 +16,3 @@
     {{>footer}}
   </body>
 </html>
-
