--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -12,7 +12,7 @@
               </div>
               <div class="contentInnerContainer">
                 <span class="contentDescription"> 
-                  <p>{{description}}</p>
+                  <p>{{{description}}}</p>
                 </span>
               </div>
             </div>
