--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -6,11 +6,11 @@
           <img alt="{{title}} photo" src="/img/{{image}}" height="96" width="96"/> 
         </div>
         <div class="post_title_description">
-          <p>{{description}}</p>
+          <p>{{{description}}}</p>
         </div>
         <div class="post_Container">
           <div class="post_InnerContainer">
-            <p class="post_Description">{{body}}</p>
+            <p class="post_Description">{{{body}}}</p>
           </div>
         </div>
       </div>
