--- a/server/views/singleToyProblem.handlebars
+++ b/server/views/singleToyProblem.handlebars
@@ -6,11 +6,11 @@
           <img alt="{{title}} photo" src="/img/{{image}}" height="96" width="96"/> 
         </div>
         <div class="toy_problem_title_description">
-          <p>{{description}}</p>
+          <p>{{{description}}}</p>
         </div>
         <div class="toy_problem_Container">
           <div class="toy_problem_InnerContainer">
-            <p class="toy_problem_Description">{{body}}</p>
+            <p class="toy_problem_Description">{{{body}}}</p>
           </div>
         </div>
       </div>
