--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -8,8 +8,7 @@
 {{!--     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'> --}}
     <link rel="stylesheet" href="/style/main.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/lib/jquery-3.0.0.min.js"></script>
-  </head>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>  </head>
   <body> 
     {{>nav}}
     {{{body}}}
