--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Richard Boothe | Developer</title>
-    <link rel="icon" src="/img/favicon.ico">
+    <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
 {{!--     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'> --}}
     <link rel="stylesheet" href="/style/main.min.css" />
