--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -1,14 +1,10 @@
-<!-- Hi! Thanks for checking out my code, if you have questions about something you can contact me at richardjboothe@me.com. Happy coding! -->
+<!-- Hi! Thanks for checking out my site, if you have questions about something you can contact me at richardjboothe@me.com. -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    {{>head}}
     <title>Richard Boothe | Developer</title>
-    <link rel="icon" href="/img/favicon.png" sizes="16x16" >
-    <link rel="stylesheet" href="/style/normalize.min.css" />
-{{!--     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'> --}}
-    <link rel="stylesheet" href="/style/main.min.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>  </head>
+  </head>
   <body> 
     {{>nav}}
     {{{body}}}
