make assemble work in grunt

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,7 +1,9 @@
 /**********************************
 GENERAL
 ***********************************/
-/*(050505(RICH BLACK), 1B9AAA(LIGHT SEA GREEN), DDDBCB(bone), F5F1E3(alabaster), FFFFFF(white)*/
+
+/***********************************COLOR PALETTE ***********************************/
+/* FFFFFF(white), F5F1E3(alabaster), DDDBCB(bone), FF715B(bittersweet), 9AE19D(granny smith apple), 1B9AAA(light sea green), 686868(dim grey), 2C302E(Black leather jacket), 050505(rich black)*/
 
 body {
   font-family: 'Avenir Next ', sans-serif;
