--- a/server/views/500.html
+++ b/server/views/500.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
+        <link href='//fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/style/main.min.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,34 +27,7 @@
         </ul>
       </nav>
     </header>    {<div class="wrapper">
-  <section>
-    <ul id="options">
-      <div class="primary_content">
-        <li>
-          <a href="/toy-problems">
-            <p class="image-title">Toy Problems</p>
-            <img src="/img/toyProblems.jpg" alt="toy problems" />
-          </a>  
-        </li>
-      </div>
-      <div class="primary_content">
-        <li>
-          <a href="/blog">
-            <p class="image-title">Blog</p>
-            <img src="/img/blog.jpg" alt="blog" />
-          </a>
-        </li>
-      </div>  
-      <div class="primary_content">
-        <li>
-          <a href="/portfolio">
-            <p class="image-title">Portfolio</p>
-            <img src="/img/portfolio.jpg" alt="portfolio" />
-          </a>  
-        </li>
-      </div>
-    </ul>
-  </section>
+  <h1 class = "contentHeader">500 - Server Error</h1>
 </div>}
     <footer class="main-footer">
       <a href="http://www.github.com/richardjboothe" target="_blank"><img src="/img/github.png" alt="Github Logo" class="social-icon" ></a>
