--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -2,7 +2,7 @@
   <div id="contentMainContainer">
     <h1 class="contentHeader">Portfolio</h1>
       {{#each projects}}  
-          <a href="{{url}}" >
+          <a href="{{url}}" target="blank">
             <div class="contentContainer">
               <span class="contentTitle">
                   <h3>{{title}}</h3>
