add resume to site

--- a/server/views/resume.html
+++ b/server/views/resume.html
@@ -27,11 +27,11 @@
           <li><a href="/resume" class="navbarOption">RESUME</a></li> 
         </ul>
       </nav>
-    </header>    {<div class="wrapper">
-  <div id="contentMainContainer">
-    <h1 class="contentHeader">Blog</h1>
-  </div>
-</div>
+    </header>    {
+  <embed width="100%" height="900px" src="/pdf/resume.pdf" type="application/pdf">
+
+
+
 }
     <footer class="main-footer">
       <a href="http://www.github.com/richardjboothe" target="_blank"><img src="/img/github.png" alt="Github Logo" class="social-icon" ></a>
