--- a/server/views/additional.html
+++ b/server/views/additional.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
-        <link href='//fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/style/main.min.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +24,7 @@
           <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
           <li><a href="/blog" class="navbarOption">BLOG</a></li>
           <li><a href="/portfolio" class="navbarOption">PORTFOLIO</a></li>
+          <li><a href="/resume" class="navbarOption">RESUME</a></li> 
         </ul>
       </nav>
     </header>    {<div class="form-group">
