--- a/server/views/partials/nav.handlebars
+++ b/server/views/partials/nav.handlebars
@@ -11,6 +11,7 @@
       <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
       <li><a href="/blog" class="navbarOption">BLOG</a></li>
       <li><a href="/portfolio" class="navbarOption">PORTFOLIO</a></li>
+      <li><a href="/resume" class="navbarOption">RESUME</a></li> 
     </ul>
   </nav>
 </header>
