remove home on nav

--- a/server/views/404.html
+++ b/server/views/404.html
@@ -20,11 +20,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/" class="navbarOption">HOME</a></li>
           <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
           <li><a href="/blog" class="navbarOption">BLOG</a></li>
           <li><a href="/portfolio" class="navbarOption">PORTFOLIO</a></li>
-          <li><a href="/resume" class="navbarOption">RESUME</a></li> 
+          <li><a href="/resume" class="navbarOption" target='blank'>RESUME</a></li> 
         </ul>
       </nav>
     </header>    {<div class="wrapper">
